Fix warning icon being squished

--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -54,6 +54,9 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+
+  /* JL */
+  flex-shrink: 0;
 }
 
 .close-button {
